--- a/lang/nodejs/tsconfig.json
+++ b/lang/nodejs/tsconfig.json
@@ -5,4 +5,11 @@
         "typeRoots": ["./node_modules/@types"],
         "types": ["node", "../../typings/ses"]
     },
+    "include": [
+        "**/*.ts",
+    ],
+    "exclude": [
+        "node_modules/**",
+        "**/*.test.ts"
+    ]
 }
