--- a/lang/nodejs/tsconfig.test.json
+++ b/lang/nodejs/tsconfig.test.json
@@ -1,5 +1,5 @@
 {
-    "extends": "./tsconfig.json",
+    "extends": "./tsconfig.app.json",
     "compilerOptions": {
 			"target": "es2017",
 			"module": "commonjs",
