--- a/lang/nodejs/package.json
+++ b/lang/nodejs/package.json
@@ -9,7 +9,7 @@
   "devDependencies": {
     "@types/jest": "^24.0.9",
     "@types/node": "^11.9.6",
-    "jest": "^24.2.0-alpha.0",
+    "jest": "^24.5.0",
     "ts-jest": "^24.0.0",
     "typescript": "^3.3.3333"
   },
