--- a/lang/nodejs/package.json
+++ b/lang/nodejs/package.json
@@ -7,6 +7,8 @@
     "ses": "^0.4.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.0",
+    "@babel/preset-typescript": "^7.3.3",
     "@types/jest": "^24.0.9",
     "@types/node": "^11.9.6",
     "jest": "^24.5.0",
