--- a/lang/browser/package.json
+++ b/lang/browser/package.json
@@ -5,7 +5,7 @@
   "main": "dist/jessica.js",
   "devDependencies": {
     "parcel-bundler": "^1.12.3",
-    "ses": "^0.4.0"
+    "ses": "^0.5.0"
   },
   "scripts": {
     "build": "build.bat",
@@ -20,5 +20,6 @@
   "bugs": {
     "url": "https://github.com/michaelfig/jessica/issues"
   },
-  "homepage": "https://github.com/michaelfig/jessica#readme"
+  "homepage": "https://github.com/michaelfig/jessica#readme",
+  "dependencies": {}
 }
