--- a/lang/nodejs/tsconfig.app.json
+++ b/lang/nodejs/tsconfig.app.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+        "baseUrl": ".",
         "target": "es2015",
         "module": "esnext",
         "noImplicitAny": true,
@@ -9,7 +10,7 @@
         "types": ["node", "../../typings/ses"]
     },
     "include": [
-        "**/*.ts",
+        "**/*.ts"
     ],
     "exclude": [
         "node_modules/**",
