--- a/lang/nodejs/package.json
+++ b/lang/nodejs/package.json
@@ -5,6 +5,7 @@
   "main": "jesspipe.js",
   "dependencies": {
     "@agoric/jessie": "file:../../../../Jessie",
+    "@michaelfig/slog": "file:../../../slog",
     "@types/agoric__jessie": "file:../../../../agoric__jessie",
     "ses": "^0.4.0"
   },
@@ -15,7 +16,7 @@
     "@types/jest": "^24.0.9",
     "@types/node": "^11.9.6",
     "jest": "^24.5.0",
-    "typescript": "^3.3.3333"
+    "typescript": "^3.4.5"
   },
   "scripts": {
     "build": "build.bat",
