--- a/lang/nodejs/package.json
+++ b/lang/nodejs/package.json
@@ -4,11 +4,7 @@
   "description": "Jessica implementation for Node.js",
   "main": "jesspipe.js",
   "dependencies": {
-    "@agoric/jessie": "file:../../../../Jessie",
-    "@michaelfig/slog": "0.0.1",
-    "@types/agoric__jessie": "file:../../../../agoric__jessie",
-    "esm": "^3.2.22",
-    "ses": "^0.4.0"
+    "esm": "^3.2.22"
   },
   "devDependencies": {
     "@babel/core": "^7.4.0",
